Meu Primeiro Commit

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
     <section class="container-left">
-    <h1>(IMEB)Igreja Missão De Evangelização Do Brasil</h1>
+    <h1>(IMEB)</h1>
     <p>Igreja Missão De Evangelização do Brasil, foi fundada no ano de 1985,com a missão de pregra o evangelho a toda criatura e cultuar ao Senhor Jesus ⛪</p>
     <button>Clique Aqui</button>
     </section>
